--- a/aboutme.html
+++ b/aboutme.html
@@ -19,14 +19,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Frank Seely</a>
+						<a href="portfolio.html" class="logo">Frank Seely</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Projects</a></li>
-							<li class="active"><a href="generic.html">About me</a></li>
+							<li><a href="portfolio.html">Projects</a></li>
+							<li class="active"><a href="aboutme.html">About me</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/frank-seely/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
@@ -46,7 +46,7 @@
 								<div style="text-align: center;">
 									<img src="images/frank.jpg" style="width: 400px; border: 5px solid #ccc; border-radius: 10px;">
 									<div style="text-align: center; margin-bottom: 20px;">
-										<a href="Resume 12-20-24.pdf" target="_blank" rel="noopener noreferrer" 
+										<a href="12-22-24 Resume.pdf" target="_blank" rel="noopener noreferrer" 
 											style="font-size: 18px; text-decoration: none;">
 											View My Resume
 										</a>
@@ -55,7 +55,7 @@
 								<p><b>Hi, my name is Frank Seely.</b><br />I am an undergraduate at Boston University, studying in the College of Computing and Data Sciences. With a passion for machine learning and software development, I am excited to break into the fields of Data Science and Analytics.</p>
 								<p>Since I was young, I’ve been driven by a passion for generating new ideas and bringing them to life. To me, data science is more than just numbers and analytics—it’s a creative process of uncovering patterns, telling compelling stories, and pushing boundaries to solve meaningful problems.</p>
 								<p>My interests lie at the intersection of mathematics and computational science, where I enjoy designing algorithms, developing scalable models, and optimizing systems. I am deeply committed to continuous learning, seeking opportunities to deepen my understanding and refine my skill set. By asking meaningful questions, staying connected to emerging technologies, and embracing exploration, I strive to grow personally and professionally.</p>
-								<p>Feel free to connect with me through my social media accounts below or reach out by phone or email. You can also find my resume <a href="Resume 12-20-24.pdf" target="_blank" rel="noopener noreferrer">here.</a></p>
+								<p>Feel free to connect with me through my social media accounts below or reach out by phone or email. You can also find my resume <a href="12-22-24 Resume.pdf" target="_blank" rel="noopener noreferrer">here.</a></p>
 							</section>
 					</div>
 
