--- a/portfolio.html
+++ b/portfolio.html
@@ -29,14 +29,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Portfolio</a>
+						<a href="portfolio.html" class="logo">Portfolio</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Projects</a></li>
-							<li><a href="generic.html">About Me</a></li>
+							<li class="active"><a href="portfolio.html">Projects</a></li>
+							<li><a href="aboutme.html">About Me</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/frank-seely/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
