Realized that GitHub pages require root html be called index.html

--- a/aboutme.html
+++ b/aboutme.html
@@ -19,13 +19,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="portfolio.html" class="logo">Frank Seely</a>
+						<a href="index.html" class="logo">Frank Seely</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="portfolio.html">Projects</a></li>
+							<li><a href="index.html">Projects</a></li>
 							<li class="active"><a href="aboutme.html">About me</a></li>
 						</ul>
 						<ul class="icons">
