--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="portfolio.html" class="logo">Portfolio</a>
+						<a href="index.html" class="logo">Portfolio</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="portfolio.html">Projects</a></li>
+							<li class="active"><a href="index.html">Projects</a></li>
 							<li><a href="aboutme.html">About Me</a></li>
 						</ul>
 						<ul class="icons">
