Updated links to match repo names. Linked images and project titles as well.

--- a/index.html
+++ b/index.html
@@ -66,25 +66,25 @@
 								<article>
 									<header>
 										<span class="date">December 8, 2023</span>
-										<h2><a href="#">Airline Delay EDA<br />
+										<h2><a href="https://github.com/seelyfrank/flight-log-eda">Airline Delay EDA<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/airlinedelay.jpg" alt="" /></a>
+									<a href="https://github.com/seelyfrank/flight-log-eda" class="image fit"><img src="images/airlinedelay.jpg" alt="" /></a>
 									<p>Exploring flight trends in national U.S. airlines using Python. What factors influence delays? What flights should we avoid?</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/seelyfrank/Airport-Analysis" class="button">View Project</a></li>
+										<li><a href="https://github.com/seelyfrank/flight-log-eda" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">May 1, 2024</span>
-										<h2><a href="#">Degrees of Seperation<br />
+										<h2><a href="https://github.com/seelyfrank/six-degrees-of-seperation">Degrees of Seperation<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/networksky.jpg" alt="" /></a>
+									<a href="https://github.com/seelyfrank/six-degrees-of-seperation" class="image fit"><img src="images/networksky.jpg" alt="" /></a>
 									<p>Exploring graph theory through real world social media connectivity. We are all more connected than you may think.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/seelyfrank/Six-Deg-Seperation" class="button">View Project</a></li>
+										<li><a href="https://github.com/seelyfrank/six-degrees-of-seperation" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
