--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">December 22, 2024</span>
+									<span class="date">Python, EDA, Scaling, ML</span>
 									<h2><a href="#">Transaction<br />
 									Fraud Detection</a></h2>
-									<p>(Work in progress)</p>
+									<p>Using predictive modeling to discover fraud in credit card transactions.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/transaction.jpg" alt="" /></a>
+								<a href="https://github.com/seelyfrank/fraud-detection" class="image main"><img src="images/transaction.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">View Project</a></li>
 								</ul>
@@ -65,7 +65,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">December 8, 2023</span>
+										<span class="date">Python, EDA, ML</span>
 										<h2><a href="https://github.com/seelyfrank/flight-log-eda">Airline Delay EDA<br />
 										</a></h2>
 									</header>
@@ -77,7 +77,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">May 1, 2024</span>
+										<span class="date">Rust</span>
 										<h2><a href="https://github.com/seelyfrank/six-degrees-of-seperation">Degrees of Seperation<br />
 										</a></h2>
 									</header>
