Changed background photo, formatted skills used in each project with bullets

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">Python, EDA, Scaling, ML</span>
+									<span class="date">Python &bull; EDA &bull; Scaling &bull; ML</span>
 									<h2><a href="#">Transaction<br />
 									Fraud Detection</a></h2>
 									<p>Using predictive modeling to discover fraud in credit card transactions.</p>
@@ -65,7 +65,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">Python, EDA, ML</span>
+										<span class="date">Python &bull; EDA &bull; ML</span>
 										<h2><a href="https://github.com/seelyfrank/flight-log-eda">Airline Delay EDA<br />
 										</a></h2>
 									</header>
@@ -77,7 +77,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">Rust</span>
+										<span class="date">Rust &bull; Unit Testing</span>
 										<h2><a href="https://github.com/seelyfrank/six-degrees-of-seperation">Degrees of Seperation<br />
 										</a></h2>
 									</header>
