Fixed missing link for featured post, changed transaction photo.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								</header>
 								<a href="https://github.com/seelyfrank/fraud-detection" class="image main"><img src="images/transaction.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://github.com/seelyfrank/fraud-detection" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
