Fixed missing link on featured post

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">Python &bull; EDA &bull; Scaling &bull; ML</span>
-									<h2><a href="#">Transaction<br />
+									<h2><a href="https://github.com/seelyfrank/fraud-detection">Transaction<br />
 									Fraud Detection</a></h2>
 									<p>Using predictive modeling to discover fraud in credit card transactions.</p>
 								</header>
