--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">Python &bull; EDA &bull; Scaling &bull; ML</span>
-									<h2><a href="https://github.com/seelyfrank/fraud-detection">Transaction<br />
-									Fraud Detection</a></h2>
-									<p>Using predictive modeling to discover fraud in credit card transactions.</p>
+									<span class="date">Rust &bull; Unit Testing</span>
+									<h2><a href="https://github.com/seelyfrank/six-degrees-of-seperation">Degrees of Seperation<br />
+									</a></h2>
 								</header>
-								<a href="https://github.com/seelyfrank/fraud-detection" class="image main"><img src="images/transaction.jpg" alt="" /></a>
+								<a href="https://github.com/seelyfrank/six-degrees-of-seperation" class="image main"><img src="images/networksky.jpg" alt="" /></a>
+								<p>Exploring graph theory through real world social media connectivity. We are all more connected than you may think.</p>
 								<ul class="actions special">
-									<li><a href="https://github.com/seelyfrank/fraud-detection" class="button large">View Project</a></li>
+									<li><a href="https://github.com/seelyfrank/six-degrees-of-seperation" class="button">View Project</a></li>
 								</ul>
 							</article>
 
@@ -66,7 +66,7 @@
 								<article>
 									<header>
 										<span class="date">Python &bull; EDA &bull; ML</span>
-										<h2><a href="https://github.com/seelyfrank/flight-log-eda">Airline Delay EDA<br />
+										<h2><a href="https://github.com/seelyfrank/flight-log-eda">Airline Delay EDA<br /><br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/seelyfrank/flight-log-eda" class="image fit"><img src="images/airlinedelay.jpg" alt="" /></a>
@@ -75,16 +75,16 @@
 										<li><a href="https://github.com/seelyfrank/flight-log-eda" class="button">View Project</a></li>
 									</ul>
 								</article>
+
 								<article>
 									<header>
-										<span class="date">Rust &bull; Unit Testing</span>
-										<h2><a href="https://github.com/seelyfrank/six-degrees-of-seperation">Degrees of Seperation<br />
-										</a></h2>
+										<span class="date">Python &bull; EDA &bull; Scaling &bull; ML</span>
+										<h2><a href="https://github.com/seelyfrank/fraud-detection">Transaction Fraud Detection</a></h2>
 									</header>
-									<a href="https://github.com/seelyfrank/six-degrees-of-seperation" class="image fit"><img src="images/networksky.jpg" alt="" /></a>
-									<p>Exploring graph theory through real world social media connectivity. We are all more connected than you may think.</p>
+									<a href="https://github.com/seelyfrank/fraud-detection" class="image fit"><img src="images/transaction.jpg" alt="" /></a>
+									<p>Using predictive modeling to discover fraud in credit card transactions.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/seelyfrank/six-degrees-of-seperation" class="button">View Project</a></li>
+										<li><a href="https://github.com/seelyfrank/fraud-detection" class="button large">View Project</a></li>
 									</ul>
 								</article>
 							</section>
