Updated project descriptions

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									</a></h2>
 								</header>
 								<a href="https://github.com/seelyfrank/six-degrees-of-seperation" class="image main"><img src="images/networksky.jpg" alt="" /></a>
-								<p>Exploring graph theory through real world social media connectivity. We are all more connected than you may think.</p>
+								<p>Exploring Social Network Connectivity Through Graph Theory and Algorithmic Analysis</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/seelyfrank/six-degrees-of-seperation" class="button">View Project</a></li>
 								</ul>
@@ -70,7 +70,8 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/seelyfrank/flight-log-eda" class="image fit"><img src="images/airlinedelay.jpg" alt="" /></a>
-									<p>Exploring flight trends in national U.S. airlines using Python. What factors influence delays? What flights should we avoid?</p>
+									<p>This project delves into the factors influencing flight delays across national
+										U.S. airlines, aiming to uncover patterns and provide actionable insights for travelers.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/seelyfrank/flight-log-eda" class="button">View Project</a></li>
 									</ul>
@@ -82,7 +83,7 @@
 										<h2><a href="https://github.com/seelyfrank/fraud-detection">Transaction Fraud Detection</a></h2>
 									</header>
 									<a href="https://github.com/seelyfrank/fraud-detection" class="image fit"><img src="images/transaction.jpg" alt="" /></a>
-									<p>Using predictive modeling to discover fraud in credit card transactions.</p>
+									<p>This project focuses on identifying fraudulent credit card transactions using predictive modeling techniques and machine learning algorithms.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/seelyfrank/fraud-detection" class="button large">View Project</a></li>
 									</ul>
