Updated featured post description.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 									</a></h2>
 								</header>
 								<a href="https://github.com/seelyfrank/six-degrees-of-seperation" class="image main"><img src="images/networksky.jpg" alt="" /></a>
-								<p>Exploring Social Network Connectivity Through Graph Theory and Algorithmic Analysis</p>
+								<p>Exploring Social Network Connectivity Through Graph Theory and Algorithmic Analysis. My implementation is demonstrated
+									using public stanford network datasets. Used rust for performance benefits. </p>
 								<ul class="actions special">
 									<li><a href="https://github.com/seelyfrank/six-degrees-of-seperation" class="button">View Project</a></li>
 								</ul>
